# Tabula-Rasa

./: .gitignore  LICENSE  README.md
TabaluRasa/: TabaluRasa.uproject
TabaluRasa/Binaries/Win64/: TabaluRasa.exp
TabaluRasa/Config/: DefaultEngine.ini  DefaultGame.ini  DefaultInput.ini
TabaluRasa/Content/: BlankMaterial.uasset  Test.uasset  TestMap.umap  TestMap_2.umap
TabaluRasa/Content/Caracter/: FirstPerson.uasset
TabaluRasa/Content/Character/: CharacterModel.uasset  FirstPerson.uasset  Test.uasset
TabaluRasa/Import/: CharacterModel.fbx
TabaluRasa/Plugins/VoxelLib/: VoxelLib.uplugin
TabaluRasa/Plugins/VoxelLib/Source/VoxelLib/: VoxelLib.Build.Cs
TabaluRasa/Plugins/VoxelLib/Source/VoxelLib/Private/: Chunk.cpp  Chunk.h  ChunkManager.cpp  ChunkManager.h  SolidActor.cpp  SolidActor.h  VoxelLibPlugin.cpp  VoxelLibPluginPrivatePCH.h  VoxelMeshComponent.cpp  VoxelMeshComponent.h
TabaluRasa/Plugins/VoxelLib/Source/VoxelLib/Public/: Chunk.h  ChunkManager.h  IVoxelLibPlugin.h  SolidActor.h  VoxelLibPluginPrivatePCH.h  VoxelMeshComponent.h
TabaluRasa/Source/: TabaluRasa.Target.cs  TabaluRasaEditor.Target.cs
TabaluRasa/Source/TabaluRasa/: DefaultPlayer.cpp  DefaultPlayer.h  TabaluRasa.Build.cs  TabaluRasa.cpp  TabaluRasaGameMode.cpp  TabaluRasaGameMode.h
TabulaRasa/: CMakeLists.txt  GenerateVisualStudioFiles.bat  JohansTODO.md  JohansTODO.txt
TabulaRasa/Assets/Fonts/: font.fnt
TabulaRasa/Assets/Models/: CharacterModel.mb  Chest.mb  Chest_Model.fbx  Chest_Model_2.fbx  Chest_Model_3.fbx  chest.mtl
TabulaRasa/Assets/Scripts/: init.py  preferences.lua  test.lua  tick.py  world_gen.lua  world_gen.script
TabulaRasa/Assets/Scripts/WorldGen/: Trees.lua  Trees2.0.lua  biome_test.lua  world_gen.lua
TabulaRasa/Assets/Shaders/: CustomBlockFragmentShader.glsl  CustomBlockVertexShader.glsl  Fragment2D.glsl  FragmentDebugGUI.glsl  FragmentShader.glsl  FragmentShaderLightPass.glsl  FragmentShaderSSAO.glsl  FragmentShaderSSAOBlur.glsl  FragmentTextured2D.glsl  GeometryShader.glsl  Vertex2D.glsl  VertexDebugGUI.glsl  VertexShader.glsl  VertexShaderLightPass.glsl  VertexShaderSSAO.glsl  VertexTextured2D.glsl  fragment_font_render.glsl  vertex_font_render.glsl  vertex_rect_render.glsl
TabulaRasa/Debug/: TabulaRasa.exp  TabulaRasa.ilk
TabulaRasa/Include/: DynamicArray.cpp  picopng.cpp  tinydir.h
TabulaRasa/Lib/: lua52.lib
TabulaRasa/Lib/Darwin/: libfreetype.6.dylib
TabulaRasa/Lib/Windows/: glfw3.lib
TabulaRasa/Release/: TabulaRasa
TabulaRasa/Source/: main.cpp
TabulaRasa/Source/Engine/: Block.cpp  Block.h  Camera.cpp  Camera.h  Chunk.cpp  Chunk.h  ChunkManager.cpp  ChunkManager.h  Common.h  Console.cpp  Console.h  Engine.h  Hash.cpp  Hash.h  Input.cpp  Input.h  Noise.cpp  Noise.h  Octree.cpp  Octree.h  PerlinNoise.cpp  PerlinNoise.h  PythonScript.cpp  PythonScript.h  ScriptEngine.cpp  ScriptEngine.h  VoxelSide.h
TabulaRasa/Source/Engine/Async/: Async.h  CriticalSection.h  Job.h  Mutex.h  Thread.cpp  Thread.h  ThreadSystem.cpp  ThreadSystem.h
TabulaRasa/Source/Engine/Core/: List.h  Matrix.h  Memory.cpp  Memory.h  Random.cpp  Random.h  Vector.h
TabulaRasa/Source/Game/: Player.cpp  Player.h  World.cpp  World.h  WorldGenerator.cpp  WorldGenerator.h
TabulaRasa/Source/Platform/: OSXPlatformFilesystem.cpp  OSXPlatformFilesystem.h  OSXPlatformWindow.cpp  OSXPlatformWindow.h  Platform.h  WindowsPlatformFilesystem.cpp  WindowsPlatformFilesystem.h  WindowsPlatformWindow.cpp  WindowsPlatformWindow.h
TabulaRasa/Source/Rendering/: ChunkRenderComponent.cpp  ChunkRenderComponent.h  ChunkRenderer.cpp  ChunkRenderer.h  Fonts.cpp  Fonts.h  GL_shader.cpp  GL_shader.h  GuiSystem.cpp  GuiSystem.h  RenderComponent.cpp  RenderComponent.h  Renderer.cpp  Renderer.h  RenderingEngine.cpp  RenderingEngine.h  Shader.cpp  Shader.h  TextRender.cpp  TextRender.h  TextRenderer.cpp  TextRenderer.h  Texture.cpp  Texture.h  Voxel.cpp  Voxel.h
TabulaRasa/Source/Rendering/GUI/: GUIText.cpp  GUIText.h
TabulaRasa/Source/Rendering/GUI/imgui/: imgui.h
TabulaRasa/Source/Rendering/Shaders/: ChunkRenderShader.cpp  ChunkRenderShader.h  DebugGUIShader.cpp  DebugGUIShader.h  LightPassShader.cpp  LightPassShader.h  SSAOBlurShader.cpp  SSAOBlurShader.h  SSAOShader.cpp  SSAOShader.h  Shader.cpp  Shader.h
TabulaRasa/TabulaRasa.xcodeproj/xcuserdata/johanwieslander.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
